# GCP_ML_Deploy

./: README.md  pyproject.toml
notebooks/: cifar10_model.keras  dev_cnn.ipynb
